--- a/login.html
+++ b/login.html
@@ -107,7 +107,7 @@
 <input type="password" placeholder="password"/>
 </div>
 <input type="submit" value="login">
-<a href="https://github.com/alduinnirmal">GitHub</a>
+<a href="https://github.com/alduinnirmal">Git-Hub</a>
 </form>
 
 </div>
