--- a/login.html
+++ b/login.html
@@ -107,6 +107,7 @@
 <input type="password" placeholder="password"/>
 </div>
 <input type="submit" value="login">
+<a href="https://github.com/alduinnirmal">GitHub</a>
 </form>
 
 </div>
